--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/webjars/bootstrap/3.3.7-1/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="/css/app.css">
 </head>
-<body background-color: "#444444">
+<body>
 <section id="content" class="m-t-lg wrapper-md animated fadeInUp ">
     <div class="container aside-xl" style="margin-top: 48px;">
         <a class="navbar-brand block"><span class="h1 font-bold" style="color: #ffffff">任务分发系统</span></a>
@@ -15,12 +15,12 @@
             <header class="wrapper text-center">
                 <strong class="text-sucess">用户登录</strong>
             </header>
-            <form action="emp/login" method="get" id="loginMsg">
+            <form action="/user/login" method="get" id="loginMsg">
                 <div class="form-group">
-                    <input type="text" name="empName" placeholder="用户名" class="form-control  input-lg text-center no-border">
+                    <input type="text" name="userName" placeholder="用户名" class="form-control  input-lg text-center no-border">
                 </div>
                 <div class="form-group">
-                    <input type="password" name="empPassword" placeholder="密码" class="form-control  input-lg text-center no-border">
+                    <input type="password" name="userPassword" placeholder="密码" class="form-control  input-lg text-center no-border">
                 </div>
 
                 <button type="submit" class="btn btn-lg btn-danger lt b-white b-2x btn-block" id="validate-submit">
